2013-03-16  Leo Liu  <sdl.web@gmail.com>

	* progmodes/scheme.el: Add indentation and font-locking for λ.
	(Bug#13975)

2013-03-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-auto-fill): Don't inf-loop if there's no
	token before point (bug#13942).

2013-03-16  Leo Liu  <sdl.web@gmail.com>

	* thingatpt.el (end-of-sexp): Fix bug#13952.  Use syntax-after.

2013-03-16  Glenn Morris  <rgm@gnu.org>

	* Version 24.3 released.

2013-03-16  Eli Zaretskii  <eliz@gnu.org>

	* startup.el (command-line-normalize-file-name): Fix handling of
	backslashes in DOS and Windows file names.  Reported by Xue Fuqiao
	<xfq.free@gmail.com> in
	http://lists.gnu.org/archive/html/help-gnu-emacs/2013-03/msg00245.html.

2013-03-15  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.2.7.

	* net/trampver.el: Update release number.

2013-03-14  Tassilo Horn  <tsdh@gnu.org>

	* doc-view.el Fix bug#13887.
	(doc-view-insert-image): Don't modify overlay associated to
	non-live windows, and implement horizontal centering of image in
	case it's smaller than the window.
	(doc-view-new-window-function): Force redisplay of new windows on
	doc-view buffers.

2013-03-13  Karl Fogel  <kfogel@red-bean.com>

	* saveplace.el (save-place-alist-to-file): Don't sort
	`save-place-alist', just pretty-print it (bug#13882).

2013-03-13  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-handle-insert-directory): Check,
	whether `default-file-name-coding-system' is bound.  It isn't in
	XEmacs.

2013-03-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/byte-run.el (defun-declarations-alist): Don't use
	backquotes for `obsolete' (bug#13929).

	* international/mule.el (find-auto-coding): Include file name in
	obsolescence warning (bug#13922).

2013-03-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/cfengine.el (cfengine-parameters-indent): New variable
	for CFEngine 3-specific indentation.