@@ -1,3 +1,8 @@
+2013-03-17  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-ext.el (math-read-number-fancy): Check for an explicit
+	radix before checking for HMS forms.
+
 2013-03-16  Leo Liu  <sdl.web@gmail.com>
 
 	* progmodes/scheme.el: Add indentation and font-locking for λ.
